# opcgrpc

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cross_toolchain.cmake  vcpkg.json
config/: opc-reader.json  opc_reader.ini
libs/: CMakeLists.txt
libs/opcdalib/include/: OPCClient.h
libs/opcdalib/lib/: OPCClientToolKit32.lib  OPCClientToolKit32D.lib  OPCClientToolKit64.lib
libs/opcreader/: CMakeLists.txt  opcreader.cpp  opcreader.h
proto-grpc/: CMakeLists.txt  generate from proto.txt
proto-grpc/grpcopc-proto/: CMakeLists.txt  opcgrpc.proto
src/: CMakeLists.txt
src/opc-reader/: CMakeLists.txt  main.cpp
visu/: arma.natvis  arma1.natvis  arma_qt5.natvis  jsoncpp.natvis  jsoncpp_arma_qt5.natvis  qt5.natvis
